test/tests/stages/11_long_integers/valid/libraries/long_global_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  long
  int
  identifier(l)
  =
  const long(8589934592l)
  ;
  long
  identifier(return_l)
  (
  void
  )
  {
  return
  identifier(l)
  ;
  }
  int
  identifier(return_l_as_int)
  (
  void
  )
  {
  return
  identifier(l)
  ;
  }
