test/tests/stages/11_long_integers/invalid_parse/invalid_cast.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  (
  static
  int
  )
  const int(10)
  ;
  }
